
 * Widget CustomForm: empty output with readOnly configuration

 * Widget LinkCard: filter button doesn't enable filter

 * Widget OpenReport: doen't submits readOnly parameters

 * Error editing relation on relation tab in 1:N domain on side 1

 * Error on showing son of hidden class

 * Description not required in email template creation

 * Widget's controllers reference lose





CMDBuild 2.4.0 (released 2016/03/31)


NEW FEATURES

 * Localization table

 * Set service user from administration interface

 * CMIS support for accessing DMS

 * Custom Form widget

 * Relations graph

 * Navigation history

 * Filters for report and dashboard parameters

 * Adoption of Java 8

 * REST - "user stoppable" information for processes

 * REST - Target type for reference and foreign key attributes

 * REST - Default order for classes and processes

 * Lock management disabled by default

 * Add a checkbox to user's administration for show all or only active ones

 * REST - Functions management

 * Remove e-mail from queue when it has no reference

 * Workflow API within legacy Groovy toolagent

 * REST - writable status also for process instance activitiy details

 * Extension to the visibility of process instances

 * Add attachments on closed activities

 * STARTTLS support for e-mail management

 * Filters based on functions within e-mail tasks

 * Metadata for process instance activities

 * Feedback on follow relation action

 * Added Arabic translation

 * Added Chinese translation

 * Added European Portuguesse translation

 * New query parameter for multiple response to determine what kind of relations' info we need - with attributes or without.

 * Updated French translations

 * Updated Dutch translations


FIXES

 * Add card button enabled also on empty superclasses

 * Missing lookup values are wrongly serialized when translations are enabled

 * Add group filter checkbox wrong translation

 * Add index field for ordering card widgets
